--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         <p class="text-gray-600 text-lg">
           Leaders with great ideas shouldn't have to struggle to find a competent, high-performing team to execute their vision.
         </p>
+        <div class="mt-8">
+          <a href="#contact" class="bg-gray-800 text-white font-semibold px-8 py-3 rounded-lg hover:bg-gray-900 transition-colors duration-300">Let's Discuss</a>
+        </div>
       </div>
     </div>
   </section>
@@ -115,6 +118,9 @@
           <p class="text-gray-600">Exceptional Software is the result. As one cohesive team, you get more than just code—you get the perfect storm for innovation.</p>
         </div>
       </div>
+      <div class="mt-16 text-center fade-in-section">
+        <a href="#process" class="bg-gray-800 text-white font-semibold px-8 py-3 rounded-lg hover:bg-gray-900 transition-colors duration-300">Discover Our Process</a>
+      </div>
     </div>
   </section>
 
@@ -124,6 +130,9 @@
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="fade-in-section">
           <h2 class="text-3xl md:text-4xl font-bold text-gray-900 leading-tight">We know that creating a great product is complicated.</h2>
+          <div class="mt-8">
+            <a href="#contact" class="bg-gray-800 text-white font-semibold px-8 py-3 rounded-lg hover:bg-gray-900 transition-colors duration-300">Let's Talk</a>
+          </div>
         </div>
         <div class="space-y-8 fade-in-section" style="transition-delay: 150ms;">
           <div class="flex items-start">
@@ -144,7 +153,7 @@
   </section>
 
   <!-- Our Proven Process Section -->
-  <section class="py-20 md:py-32">
+  <section id="process" class="py-20 md:py-32">
     <div class="container mx-auto px-6">
       <div class="text-center max-w-3xl mx-auto mb-20 fade-in-section">
         <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Our Proven Process</h2>
@@ -211,6 +220,9 @@
           </div>
         </div>
       </div>
+      <div class="mt-16 text-center fade-in-section">
+        <a href="#contact" class="bg-blue-600 text-white font-semibold px-8 py-3 rounded-lg hover:bg-blue-700 transition-colors duration-300">Introduction Call</a>
+      </div>
     </div>
   </section>
 
@@ -219,17 +231,8 @@
     <div class="container mx-auto px-6">
       <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-2xl border border-gray-200 fade-in-section">
         <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">The Partner You've been Searching For...</h2>
-        <div class="prose prose-lg text-gray-600 max-w-none space-y-4">
-          <p>At Stackit, we know you’re the kind of leader committed to transforming a great idea into an extraordinary software product. To do that, you need a highly professional, specialized team that acts as a true partner in bringing your vision to life.</p>
-          <p>But there’s a problem: finding a capable dev partner is harder than it should be. Choosing the wrong one too often leads to Development Chaos. Instead of leading, you’re left managing misaligned teams, frustrated by a search that wastes time and drains energy. We believe businesses shouldn’t have to struggle when they want to build an exceptional product with external help.</p>
-          <p>We understand the frustration you feel when new growth opportunities are strained by a lack of quality and the stress of having to micromanage instead of lead. We genuinely share your concern about wasting precious time and money, especially when finding the right partner feels like such a high-stakes challenge. That’s why we built our company to operate with the drive of an in-house team, combining rigorous engineering discipline with the obsessive collaboration of a true partner.</p>
-          <p>Our path forward is designed to be clear and straightforward. It begins with an introduction call to understand your vision and strategic goals. From there, we present a tailored game plan that provides a comprehensive roadmap for success. Once you approve, our team integrates seamlessly with yours, allowing you to build with confidence as you watch your vision manifest in a steady, predictable rhythm of progress.</p>
-          <p class="font-semibold text-gray-900">So, schedule an introduction call today. You can stop being drained by constant team oversight and start building the extraordinary software your vision demands.</p>
-        </div>
-        <div class="mt-8">
-          <a href="#" class="bg-blue-600 text-white font-semibold px-8 py-4 rounded-lg hover:bg-blue-700 transition-colors duration-300 inline-block text-lg">
-            Introduction Call
-          </a>
+        <div class="prose prose-lg text-gray-600 max-w-none">
+          <p>At Stackit, we know you’re the kind of leader committed to transforming a great idea into an extraordinary software product. To do that, you need a highly professional, specialized team that acts as a true partner in bringing your vision to life... <a href="blog.html" class="text-blue-600 font-semibold hover:underline">Continue Reading &rarr;</a></p>
         </div>
       </div>
     </div>
@@ -275,4 +278,8 @@
 </script>
 </body>
 </html>
+
+
+
+
 
