--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 <!-- Header -->
 <header id="header" class="bg-white/80 backdrop-blur-lg fixed top-0 left-0 right-0 z-50 transition-all duration-300">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-900">Stackit</h1>
+    <a href="index.html">
+      <img src="StackitLogo2025-A.png" alt="Stackit Logo" class="h-8 w-auto">
+    </a>
     <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-300">Introduction Call</a>
   </div>
 </header>
@@ -240,9 +242,16 @@
 </main>
 
 <!-- Footer -->
-<footer class="py-12 bg-white border-t border-gray-200">
-  <div class="container mx-auto px-6 text-center">
-    <p class="text-gray-500">&copy; 2025 Stackit. All rights reserved.</p>
+<footer class="bg-[#1b1c19] text-white">
+  <div class="container mx-auto px-6 py-16 text-center">
+    <h2 class="text-3xl font-bold mb-6">Get In Touch</h2>
+    <div class="space-y-2 text-lg text-gray-300">
+      <p><a href="tel:619-917-5387" class="hover:text-white transition-colors">(619) 917-5387</a></p>
+      <p><a href="mailto:hello@stackitgroup.com" class="hover:text-white transition-colors">hello@stackitgroup.com</a></p>
+    </div>
+    <div class="mt-12 border-t border-gray-700 pt-8">
+      <p class="text-gray-500">&copy; 2025 Stackit. All rights reserved.</p>
+    </div>
   </div>
 </footer>
 
@@ -278,8 +287,5 @@
 </script>
 </body>
 </html>
-
-
-
 
 
