--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <!-- Header -->
 <header id="header" class="bg-white/80 backdrop-blur-lg fixed top-0 left-0 right-0 z-50 transition-all duration-300">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-    <a href="index.html">
-      <img src="StackitLogo2025-A.png" alt="Stackit Logo" class="h-8 w-auto">
+    <a href="index.html" class="flex items-center">
+      <img src="StackitLogo2025-A-Extended.png" alt="Stackit Logo" class="h-9 w-auto">
     </a>
     <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-300">Introduction Call</a>
   </div>
@@ -202,7 +202,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-900 mb-2">Pulse</h3>
             <p class="text-sm font-semibold text-gray-500 mb-3">See your vision manifest – two weeks at a time.</p>
-            <p class="text-gray-600">Your project comes alive in a steady "Pulse" of focused, two-week development cycles. This rhythm makes progress visible and maintains alignment, culminating in our core promise: a demonstration of working software every two weeks.</p>
+            <p class="text-gray-600">Your project comes alive in a steady "Pulse" of focused, two-week development cycles. This rhythm makes progress visible and maintains alignment, culminating in our core promise: a demonstration of a working software every two weeks.</p>
           </div>
           <div class="timeline-item pb-16 pl-10 fade-in-section">
             <div class="absolute w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center -left-5 border-4 border-white">
@@ -287,5 +287,4 @@
 </script>
 </body>
 </html>
-
 
