--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
     <a href="index.html" class="flex items-center">
       <img src="StackitLogo2025-A-Extended.png" alt="Stackit Logo" class="h-9 w-auto">
     </a>
-    <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-300">Introduction Call</a>
+    <div class="flex items-center space-x-6">
+      <a href="tel:619-917-5387" class="text-gray-600 font-semibold hover:text-blue-600 transition-colors hidden md:block">(619) 917-5387</a>
+      <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-300">Introduction Call</a>
+    </div>
   </div>
 </header>
 
@@ -228,14 +231,55 @@
     </div>
   </section>
 
-  <!-- Final CTA Section -->
+  <!-- Contact Form Section -->
   <section id="contact" class="py-20 md:py-32 bg-gray-50">
     <div class="container mx-auto px-6">
       <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-2xl border border-gray-200 fade-in-section">
-        <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">The Partner You've been Searching For...</h2>
-        <div class="prose prose-lg text-gray-600 max-w-none">
-          <p>At Stackit, we know you’re the kind of leader committed to transforming a great idea into an extraordinary software product. To do that, you need a highly professional, specialized team that acts as a true partner in bringing your vision to life... <a href="blog.html" class="text-blue-600 font-semibold hover:underline">Continue Reading &rarr;</a></p>
+        <div class="text-center mb-12">
+          <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Request Your Consultation Below</h2>
+          <p class="text-lg text-gray-600 mt-4">Let's discuss how we can bring your vision to life.</p>
         </div>
+
+        <form action="#" method="POST">
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <div>
+              <label for="first-name" class="block text-sm font-medium text-gray-700">First Name</label>
+              <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+            </div>
+            <div>
+              <label for="last-name" class="block text-sm font-medium text-gray-700">Last Name</label>
+              <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+            </div>
+            <div>
+              <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
+              <input type="email" name="email" id="email" autocomplete="email" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+            </div>
+            <div>
+              <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
+              <input type="tel" name="phone" id="phone" autocomplete="tel" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+            </div>
+            <div class="md:col-span-2">
+              <label for="how-heard" class="block text-sm font-medium text-gray-700">How did you hear about us?</label>
+              <select id="how-heard" name="how-heard" class="mt-1 block w-full pl-3 pr-10 py-3 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md">
+                <option>Referral</option>
+                <option>Google</option>
+                <option>Social Media</option>
+                <option>Advertisement</option>
+                <option>Other</option>
+              </select>
+            </div>
+            <div class="md:col-span-2">
+              <label for="message" class="block text-sm font-medium text-gray-700">Tell us about your project</label>
+              <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500"></textarea>
+            </div>
+          </div>
+          <div class="mt-8 text-center">
+            <button type="submit" class="w-full md:w-auto bg-blue-600 text-white font-semibold px-12 py-3 rounded-lg hover:bg-blue-700 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+              Submit Request
+            </button>
+          </div>
+        </form>
+
       </div>
     </div>
   </section>
@@ -243,15 +287,23 @@
 
 <!-- Footer -->
 <footer class="bg-[#1b1c19] text-white">
-  <div class="container mx-auto px-6 py-16 text-center">
-    <h2 class="text-3xl font-bold mb-6">Get In Touch</h2>
-    <div class="space-y-2 text-lg text-gray-300">
-      <p><a href="tel:619-917-5387" class="hover:text-white transition-colors">(619) 917-5387</a></p>
-      <p><a href="mailto:hello@stackitgroup.com" class="hover:text-white transition-colors">hello@stackitgroup.com</a></p>
+  <div class="container mx-auto px-6 py-16 grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
+    <!-- Left: Get In Touch -->
+    <div class="text-center md:text-left">
+      <h2 class="text-3xl font-bold mb-6">Get In Touch</h2>
+      <div class="space-y-2 text-lg text-gray-300">
+        <p><a href="tel:619-917-5387" class="hover:text-white transition-colors">(619) 917-5387</a></p>
+        <p><a href="mailto:hello@stackitgroup.com" class="hover:text-white transition-colors">hello@stackitgroup.com</a></p>
+      </div>
     </div>
-    <div class="mt-12 border-t border-gray-700 pt-8">
-      <p class="text-gray-500">&copy; 2025 Stackit. All rights reserved.</p>
+
+    <!-- Center: Success Coded -->
+    <div class="flex justify-center order-first md:order-none">
+      <img src="StackitLogo2025-A-SuccessCoded.jpg" alt="Success. Coded." class="h-12 w-auto">
     </div>
+
+    <!-- Right: Empty for balance -->
+    <div></div>
   </div>
 </footer>
 
@@ -287,4 +339,5 @@
 </script>
 </body>
 </html>
+
 
