--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
   </section>
 
   <!-- The Stakes Section -->
-  <section class="py-20 md:py-28 bg-[#222326]">
+  <section class="min-h-screen flex items-center bg-[#222326]">
     <div class="container mx-auto px-6 text-center">
-      <div class="max-w-4xl mx-auto fade-in-section">
-        <h2 class="text-4xl md:text-5xl font-bold text-white mb-6">Finding a good team shouldn't be so hard</h2>
-        <p class="text-gray-300 text-xl">
+      <div class="max-w-5xl mx-auto fade-in-section">
+        <h2 class="text-5xl md:text-7xl font-bold text-white mb-8">Finding a good team shouldn't be so hard</h2>
+        <p class="text-2xl md:text-3xl text-gray-300">
           Leaders with great ideas shouldn't have to struggle to find a competent, high-performing team to execute their vision.
         </p>
-        <div class="mt-10">
-          <a href="#contact" class="bg-blue-600 text-white font-semibold px-8 py-4 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-lg">Let's Discuss</a>
+        <div class="mt-20">
+          <a href="#contact" class="bg-blue-600 text-white font-semibold px-10 py-5 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-xl">Let's Discuss</a>
         </div>
       </div>
     </div>
@@ -130,7 +130,7 @@
   </section>
 
   <!-- Complicated Product Section -->
-  <section class="py-20 md:py-32 bg-gray-50">
+  <section class="min-h-screen flex items-center bg-gray-50">
     <div class="container mx-auto px-6">
       <div class="grid md:grid-cols-2 gap-16 items-center">
         <div class="fade-in-section">
@@ -339,7 +339,6 @@
 </script>
 </body>
 </html>
-
 
 
 
