--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
         <p class="text-2xl md:text-3xl text-gray-300">
           Leaders with great ideas shouldn't have to struggle to find a competent, high-performing team to execute their vision.
         </p>
-        <div class="mt-20">
+        <div class="mt-20 flex flex-col sm:flex-row items-center justify-center gap-6">
           <a href="#contact" class="bg-blue-600 text-white font-semibold px-10 py-5 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-xl">Let's Discuss</a>
+          <a href="case-study.html" class="bg-transparent border-2 border-white text-white font-semibold px-10 py-5 rounded-lg hover:bg-white hover:text-gray-900 transition-colors duration-300 text-xl">View Case Studies</a>
         </div>
       </div>
     </div>
@@ -339,7 +340,4 @@
 </script>
 </body>
 </html>
-
-
-
 
