--- a/index.html
+++ b/index.html
@@ -242,34 +242,16 @@
         </div>
 
         <form action="#" method="POST">
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <div class="space-y-6">
             <div>
-              <label for="first-name" class="block text-sm font-medium text-gray-700">First Name</label>
-              <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
-            </div>
-            <div>
-              <label for="last-name" class="block text-sm font-medium text-gray-700">Last Name</label>
-              <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
+              <label for="full-name" class="block text-sm font-medium text-gray-700">Full Name</label>
+              <input type="text" name="full-name" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
             </div>
             <div>
-              <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
-              <input type="email" name="email" id="email" autocomplete="email" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
+              <label for="contact-info" class="block text-sm font-medium text-gray-700">Email or Phone Number</label>
+              <input type="text" name="contact-info" id="contact-info" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
             </div>
             <div>
-              <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
-              <input type="tel" name="phone" id="phone" autocomplete="tel" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
-            </div>
-            <div class="md:col-span-2">
-              <label for="how-heard" class="block text-sm font-medium text-gray-700">How did you hear about us?</label>
-              <select id="how-heard" name="how-heard" class="mt-1 block w-full pl-3 pr-10 py-3 text-base border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-lg rounded-md">
-                <option>Referral</option>
-                <option>Google</option>
-                <option>Social Media</option>
-                <option>Advertisement</option>
-                <option>Other</option>
-              </select>
-            </div>
-            <div class="md:col-span-2">
               <label for="message" class="block text-sm font-medium text-gray-700">Tell us about your project</label>
               <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg"></textarea>
             </div>
@@ -303,8 +285,15 @@
       <img src="StackitLogo2025-A-White-SuccessCoded.jpg" alt="Success. Coded." class="h-16 w-auto">
     </div>
 
-    <!-- Right: Empty for balance -->
-    <div></div>
+    <!-- Right: Bio -->
+    <div class="text-center md:text-right text-gray-400 text-sm">
+      <p>
+        A software development agency based in San Diego, CA.
+      </p>
+      <p>
+        Established in 2017.
+      </p>
+    </div>
   </div>
 </footer>
 
