--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </a>
     <div class="flex items-center space-x-6">
       <a href="tel:619-917-5387" class="text-gray-600 font-semibold hover:text-blue-600 transition-colors hidden md:block">(619) 917-5387</a>
-      <a href="#contact" class="bg-blue-600 text-white font-semibold px-6 py-4 rounded-lg hover:bg-blue-700 transition-colors duration-300">Introduction Call</a>
+      <a href="#contact" class="bg-blue-600 text-white font-semibold px-8 py-5 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-lg">Introduction Call</a>
     </div>
   </div>
 </header>
@@ -69,7 +69,7 @@
           Build extraordinary software, with a partner who shares your standards.
         </p>
         <div class="mt-10 fade-in-section" style="transition-delay: 300ms;">
-          <a href="#contact" class="bg-gray-800 text-white font-semibold px-8 py-4 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-lg">Get In Touch</a>
+          <a href="#contact" class="bg-gray-800 text-white font-semibold px-12 py-6 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-xl">Get In Touch</a>
         </div>
       </div>
     </div>
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="mt-16 text-center fade-in-section">
-        <a href="#process" class="bg-gray-800 text-white font-semibold px-8 py-4 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-lg">Discover Our Process</a>
+        <a href="#process" class="bg-gray-800 text-white font-semibold px-12 py-6 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-xl">Discover Our Process</a>
       </div>
     </div>
   </section>
@@ -170,7 +170,7 @@
         <div class="fade-in-section">
           <h2 class="text-5xl md:text-6xl font-bold text-gray-900 leading-tight">We know that creating a great product is complicated.</h2>
           <div class="mt-10">
-            <a href="#contact" class="bg-gray-800 text-white font-semibold px-8 py-4 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-lg">Let's Talk</a>
+            <a href="#contact" class="bg-gray-800 text-white font-semibold px-12 py-6 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-xl">Let's Talk</a>
           </div>
         </div>
         <div class="space-y-8 fade-in-section" style="transition-delay: 150ms;">
@@ -260,7 +260,7 @@
         </div>
       </div>
       <div class="mt-20 text-center fade-in-section">
-        <a href="#contact" class="bg-blue-600 text-white font-semibold px-8 py-4 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-lg">Introduction Call</a>
+        <a href="#contact" class="bg-blue-600 text-white font-semibold px-12 py-6 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-xl">Introduction Call</a>
       </div>
     </div>
   </section>
@@ -290,7 +290,7 @@
             </div>
           </div>
           <div class="mt-8 text-center">
-            <button type="submit" class="w-full md:w-auto bg-blue-600 text-white font-semibold px-12 py-4 rounded-lg hover:bg-blue-700 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 text-lg">
+            <button type="submit" class="w-full md:w-auto bg-blue-600 text-white font-semibold px-12 py-6 rounded-lg hover:bg-blue-700 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 text-xl">
               Send
             </button>
           </div>
@@ -362,5 +362,4 @@
 </script>
 </body>
 </html>
-
 
