--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </a>
     <div class="flex items-center space-x-6">
       <a href="tel:619-917-5387" class="text-gray-600 font-semibold hover:text-blue-600 transition-colors hidden md:block">(619) 917-5387</a>
-      <a href="#contact" class="bg-blue-600 text-white font-semibold px-8 py-5 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-lg">Introduction Call</a>
+      <a href="#contact" class="bg-blue-600 text-white font-semibold px-8 py-4 hover:bg-blue-700 transition-colors duration-300 text-lg">Introduction Call</a>
     </div>
   </div>
 </header>
@@ -69,7 +69,7 @@
           Build extraordinary software, with a partner who shares your standards.
         </p>
         <div class="mt-10 fade-in-section" style="transition-delay: 300ms;">
-          <a href="#contact" class="bg-gray-800 text-white font-semibold px-12 py-6 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-xl">Get In Touch</a>
+          <a href="#contact" class="bg-gray-800 text-white font-semibold px-20 py-6 hover:bg-gray-900 transition-colors duration-300 text-xl inline-block">Get In Touch</a>
         </div>
       </div>
     </div>
@@ -84,8 +84,8 @@
           Leaders with great ideas shouldn't have to struggle to find a competent, high-performing team to execute their vision.
         </p>
         <div class="mt-24 flex flex-col sm:flex-row items-center justify-center gap-6">
-          <a href="case-study.html" class="bg-transparent border-2 border-white text-white font-semibold px-10 py-5 rounded-lg hover:bg-white hover:text-gray-900 transition-colors duration-300 text-xl">View Case Studies</a>
-          <a href="#contact" class="bg-blue-600 text-white font-semibold px-12 py-6 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-2xl">Let's Discuss</a>
+          <a href="case-study.html" class="bg-transparent border-2 border-white text-white font-semibold px-16 py-5 hover:bg-white hover:text-gray-900 transition-colors duration-300 text-xl inline-block">View Case Studies</a>
+          <a href="#contact" class="bg-blue-600 text-white font-semibold px-20 py-6 hover:bg-blue-700 transition-colors duration-300 text-2xl inline-block">Let's Discuss</a>
         </div>
       </div>
     </div>
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="mt-16 text-center fade-in-section">
-        <a href="#process" class="bg-gray-800 text-white font-semibold px-12 py-6 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-xl">Discover Our Process</a>
+        <a href="#process" class="bg-gray-800 text-white font-semibold px-20 py-6 hover:bg-gray-900 transition-colors duration-300 text-xl inline-block">Discover Our Process</a>
       </div>
     </div>
   </section>
@@ -170,7 +170,7 @@
         <div class="fade-in-section">
           <h2 class="text-5xl md:text-6xl font-bold text-gray-900 leading-tight">We know that creating a great product is complicated.</h2>
           <div class="mt-10">
-            <a href="#contact" class="bg-gray-800 text-white font-semibold px-12 py-6 rounded-lg hover:bg-gray-900 transition-colors duration-300 text-xl">Let's Talk</a>
+            <a href="#contact" class="bg-gray-800 text-white font-semibold px-20 py-6 hover:bg-gray-900 transition-colors duration-300 text-xl inline-block">Let's Talk</a>
           </div>
         </div>
         <div class="space-y-8 fade-in-section" style="transition-delay: 150ms;">
@@ -192,7 +192,7 @@
   </section>
 
   <!-- Our Proven Process Section -->
-  <section id="process" class="py-20 md:py-32">
+  <section id="process" class="py-20 md:py-32 bg-blue-50">
     <div class="container mx-auto px-6">
       <div class="text-center max-w-4xl mx-auto mb-20 fade-in-section">
         <h2 class="text-5xl md:text-6xl font-bold text-gray-900">Our Proven Process</h2>
@@ -202,7 +202,7 @@
         <!-- Timeline Items -->
         <div class="relative">
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
+            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
               <span class="text-blue-600 font-bold text-lg">1</span>
             </div>
             <h3 class="text-3xl font-bold text-gray-900 mb-2">Introduction Call</h3>
@@ -210,7 +210,7 @@
             <p class="text-xl text-gray-600">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
+            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
               <span class="text-blue-600 font-bold text-lg">2</span>
             </div>
             <h3 class="text-3xl font-bold text-gray-900 mb-2">Clarify the Why</h3>
@@ -218,7 +218,7 @@
             <p class="text-xl text-gray-600">We dig deep to get to the heart of your project's 'why' and what success truly looks like. By mapping out your product needs against practical limits like budget and timeline, we create a feasible roadmap for your vision.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
+            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
               <span class="text-blue-600 font-bold text-lg">3</span>
             </div>
             <h3 class="text-3xl font-bold text-gray-900 mb-2">Proposal</h3>
@@ -226,7 +226,7 @@
             <p class="text-xl text-gray-600">Building on our shared understanding, we present your tailored game plan. This comprehensive proposal clearly outlines the cost, deliverables, timeline, and team structure, giving you full confidence in the path ahead.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
+            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
               <span class="text-blue-600 font-bold text-lg">4</span>
             </div>
             <h3 class="text-3xl font-bold text-gray-900 mb-2">Build Mode: ON</h3>
@@ -234,7 +234,7 @@
             <p class="text-xl text-gray-600">With the game plan in place, we translate high-level requirements into actionable tasks. Our team establishes a clear collaboration protocol and primes the technical environment for a purposeful and efficient build.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
+            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
               <span class="text-blue-600 font-bold text-lg">5</span>
             </div>
             <h3 class="text-3xl font-bold text-gray-900 mb-2">Pulse</h3>
@@ -242,7 +242,7 @@
             <p class="text-xl text-gray-600">Your project comes alive in a steady "Pulse" of focused, two-week development cycles. This rhythm makes progress visible and maintains alignment, culminating in our core promise: a demonstration of a working software every two weeks.</p>
           </div>
           <div class="timeline-item pb-16 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
+            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
               <span class="text-blue-600 font-bold text-lg">6</span>
             </div>
             <h3 class="text-3xl font-bold text-gray-900 mb-2">The Quality Gate</h3>
@@ -250,7 +250,7 @@
             <p class="text-xl text-gray-600">Before launch, we ensure total readiness. Every feature is rigorously tested against our highest standards, and we prepare your operational environment and empower your team for a seamless, confident go-live.</p>
           </div>
           <div class="timeline-item pb-12 pl-12 fade-in-section">
-            <div class="absolute w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center -left-6 border-4 border-white">
+            <div class="absolute w-12 h-12 bg-white rounded-full flex items-center justify-center -left-6 border-4 border-blue-50">
               <span class="text-blue-600 font-bold text-lg">7</span>
             </div>
             <h3 class="text-3xl font-bold text-gray-900 mb-2">Beyond Launch</h3>
@@ -259,43 +259,18 @@
           </div>
         </div>
       </div>
-      <div class="mt-20 text-center fade-in-section">
-        <a href="#contact" class="bg-blue-600 text-white font-semibold px-12 py-6 rounded-lg hover:bg-blue-700 transition-colors duration-300 text-xl">Introduction Call</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Form Section -->
-  <section id="contact" class="py-20 md:py-32 bg-gray-50">
-    <div class="container mx-auto px-6">
-      <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-2xl border border-gray-200 fade-in-section">
-        <div class="text-center mb-12">
-          <h2 class="text-5xl md:text-6xl font-bold text-gray-900">Let's Meet and Greet!</h2>
-          <p class="text-2xl text-gray-600 mt-6">Send me your contact info so I can schedule a meeting with you..</p>
+      <div class="mt-20 pt-20 border-t border-gray-300 fade-in-section">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
+          <div class="md:col-span-2 text-center md:text-left">
+            <h3 class="text-4xl md:text-5xl font-bold text-gray-900">Let’s work together</h3>
+            <p class="text-xl text-gray-600 mt-4">
+              Reach out to our team to define, make and launch new products, predictably.
+            </p>
+          </div>
+          <div class="text-center md:text-right">
+            <a href="#contact" class="bg-blue-600 text-white font-semibold px-20 py-6 hover:bg-blue-700 transition-colors duration-300 text-xl inline-block">Introduction Call</a>
+          </div>
         </div>
-
-        <form action="#" method="POST">
-          <div class="space-y-6">
-            <div>
-              <label for="full-name" class="block text-sm font-medium text-gray-700">Full Name</label>
-              <input type="text" name="full-name" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
-            </div>
-            <div>
-              <label for="contact-info" class="block text-sm font-medium text-gray-700">Email or Phone Number</label>
-              <input type="text" name="contact-info" id="contact-info" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
-            </div>
-            <div>
-              <label for="message" class="block text-sm font-medium text-gray-700">Give us a quick intro</label>
-              <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg"></textarea>
-            </div>
-          </div>
-          <div class="mt-8 text-center">
-            <button type="submit" class="w-full md:w-auto bg-blue-600 text-white font-semibold px-12 py-6 rounded-lg hover:bg-blue-700 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 text-xl">
-              Send
-            </button>
-          </div>
-        </form>
-
       </div>
     </div>
   </section>
@@ -330,6 +305,46 @@
   </div>
 </footer>
 
+<!-- Contact Form Slide-out Panel -->
+<div id="contact-panel" class="fixed inset-y-0 right-0 z-[60] w-full max-w-2xl bg-white shadow-xl transform translate-x-full transition-transform duration-500 ease-in-out hidden">
+  <div class="relative h-full flex flex-col">
+    <div class="flex-shrink-0 p-6 flex justify-between items-center border-b">
+      <h2 class="text-2xl font-bold text-gray-900">Let's Meet and Greet!</h2>
+      <button id="close-panel-btn" class="text-gray-500 hover:text-gray-800 transition-colors">
+        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+      </button>
+    </div>
+    <div class="flex-grow overflow-y-auto p-8 md:p-10">
+      <p class="text-xl text-gray-600 mb-8">Send me your contact info so I can schedule a meeting with you.</p>
+      <form action="#" method="POST">
+        <div class="space-y-6">
+          <div>
+            <label for="full-name" class="block text-sm font-medium text-gray-700">Full Name</label>
+            <input type="text" name="full-name" id="full-name" autocomplete="name" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
+          </div>
+          <div>
+            <label for="contact-info" class="block text-sm font-medium text-gray-700">Email or Phone Number</label>
+            <input type="text" name="contact-info" id="contact-info" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg">
+          </div>
+          <div>
+            <label for="message" class="block text-sm font-medium text-gray-700">Give us a quick intro</label>
+            <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-4 py-3 border border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500 text-lg"></textarea>
+          </div>
+        </div>
+        <div class="mt-8">
+          <button type="submit" class="w-full bg-blue-600 text-white font-semibold px-20 py-6 hover:bg-blue-700 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 text-xl inline-block">
+            Send
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Overlay for Slide-out -->
+<div id="overlay" class="fixed inset-0 z-50 bg-black opacity-0 hidden transition-opacity duration-500 ease-in-out"></div>
+
+
 <script>
   // Simple script for fade-in animations on scroll
   document.addEventListener('DOMContentLoaded', () => {
@@ -358,6 +373,46 @@
         header.classList.remove('shadow-lg', 'shadow-gray-200/50');
       }
     });
+
+    // Script for slide-out contact form
+    const contactPanel = document.getElementById('contact-panel');
+    const overlay = document.getElementById('overlay');
+    const closeBtn = document.getElementById('close-panel-btn');
+    const openTriggers = document.querySelectorAll('a[href="#contact"]');
+
+    function openPanel() {
+      overlay.classList.remove('hidden');
+      contactPanel.classList.remove('hidden');
+      document.body.style.overflow = 'hidden'; // Prevent background scrolling
+
+      requestAnimationFrame(() => {
+        overlay.classList.add('opacity-50');
+        contactPanel.classList.remove('translate-x-full');
+      });
+    }
+
+    function closePanel() {
+      overlay.classList.remove('opacity-50');
+      contactPanel.classList.add('translate-x-full');
+
+      // Wait for transition to end before hiding
+      setTimeout(() => {
+        overlay.classList.add('hidden');
+        contactPanel.classList.add('hidden');
+        document.body.style.overflow = ''; // Restore scrolling
+      }, 500); // Must match the longest transition duration
+    }
+
+    openTriggers.forEach(trigger => {
+      trigger.addEventListener('click', e => {
+        e.preventDefault();
+        openPanel();
+      });
+    });
+
+    closeBtn.addEventListener('click', closePanel);
+    overlay.addEventListener('click', closePanel);
+
   });
 </script>
 </body>
