--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </p>
         <div class="mt-24 flex flex-col sm:flex-row items-center justify-center gap-6">
           <a href="case-study.html" class="bg-transparent border-2 border-gray-800 text-gray-800 font-semibold px-20 py-5 hover:bg-gray-800 hover:text-white transition-colors duration-300 text-xl inline-block">View Case Studies</a>
-          <a href="#contact" class="bg-[#3F5FDD] text-white font-semibold px-24 py-6 hover:bg-[#3550B8] transition-colors duration-300 text-2xl inline-block">Let's Discuss</a>
+          <a href="#contact" class="bg-[#0A1A62] text-white font-semibold px-24 py-6 hover:bg-[#08144f] transition-colors duration-300 text-2xl inline-block">Let's Discuss</a>
         </div>
       </div>
     </div>
@@ -406,4 +406,5 @@
 </script>
 </body>
 </html>
+
 
